--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <ol>
         <li><a href="https://bixbite2.github.io/tictactoe">Tictactoe</a></li>
         <li><a href="https://bixbite2.github.io/18.04.2018">Cursos</a></li>
+        <li><a href="https://bixbite2.github.io/Pianinho/">Piano (25.04.2018)</a></li>
+        
+        
     </ol>
 
 
